tdf#126468: MySQL/MariaDB and Firebird don't require order field in select part

Change-Id: I75f050dd6f38fefe83d24a4886610d421f72826e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/93937
Reviewed-by: Lionel Elie Mamane <lionel@mamane.lu>
Tested-by: Julien Nabet <serval2412@yahoo.fr>